[package]
name = "infodium"
version = "0.1.0"
authors = ["Nimor111 <georgi.bojinov@hotmail.com>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["mysql", "postgres"] }
diesel_codegen = { version = "*", features = ["mysql", "postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "*"
dotenv_codegen = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
